fix selected table alignment

--- a/packages/reports/app/styles/navi-reports/components/navi-table-select.less
+++ b/packages/reports/app/styles/navi-reports/components/navi-table-select.less
@@ -18,6 +18,15 @@
 
          .ember-power-select-trigger, .ember-power-select-trigger:focus {
              border: 0;
+             font-size: 14px;
          }
+
+         .ember-power-select-selected-item, .ember-power-select-placeholder {
+           margin-left: 18px;
+         }
+    }
+
+    &__dropdown-list {
+      font-size: 14px;
     }
 }
